--- a/templates/listar_rateios.html
+++ b/templates/listar_rateios.html
@@ -28,6 +28,7 @@
                 <tr>
                     <th>Usina</th>
                     <th>Cliente</th>
+                    <th>Cód. Unidade</th>
                     <th>Status</th>
                     <th>% Energia</th>
                     <th>Tarifa (R$)</th>
@@ -40,6 +41,7 @@
                 <tr>
                     <td>{{ rateio.usina.nome }}</td>
                     <td>{{ rateio.cliente.nome }}</td>
+                    <td>{{ rateio.cliente.codigo_unidade or '-' }}</td>
                     <td>
                         {% if rateio.cliente.ativo %}
                             <span class="badge bg-success">Ativo</span>
@@ -67,7 +69,7 @@
             <!-- Rodapé com total de % Energia -->
             <tfoot>
                 <tr>
-                    <th colspan="3" class="text-end">Total Rateio:</th>
+                    <th colspan="4" class="text-end">Total Rateio:</th>
                     <th>{{ total_percentual|round(2) }}%</th>
                     <th colspan="3"></th>
                 </tr>
